# downloader

./: CONTRIBUTING.md  Cargo.toml
src/: client.rs  downloader.rs  event.rs  file.rs  lib.rs
src/downloader/: blocking.rs  manager.rs
