[package]
name = "ns-downloader"
version = "0.0.1"
authors = ["Belz"]
edition = "2018"

[dependencies]
anyhow = "1"
futures = "0.3"

[dependencies.reqwest]
version = "0.11"
default-features = false

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "fs"]

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
blocking = ["reqwest/blocking"]